# CG-2-2019-Task-2

./: CMakeLists.txt  README.md
assets/Tank_M60A1_opt/: tank_m60a1.gltf
dependencies/include/GLAD/: CMakeLists.txt
dependencies/include/Hydra/: CMakeLists.txt  HydraVSGFExport.cpp  HydraVSGFExport.h
dependencies/include/LiteMath/: LiteMath.h
dependencies/include/TinyGLTF/: CMakeLists.txt  tiny_gltf.h
dependencies/include/TinyXML2/: CMakeLists.txt
shaders/: fragment.glsl  fragment_start.glsl  terrain_fragment.glsl  terrain_vertex.glsl  vertex.glsl  vertex_start.glsl
shaders/grid/: fragment.glsl  vertex.glsl
shaders/tank/: fragment.glsl  vertex.glsl
shaders/targets/: fragment.glsl  vertex.glsl
shaders/triangle/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Camera.h  HelperGL.h  ImportSceneObject.cpp  ImportSceneObject.h  LiteMath.h  MyCameras.cpp  MyCameras.h  MyGame.cpp  MyGame.h  ShaderProgram.cpp  ShaderProgram.h  common.h  drawcall.cpp  drawcall.h  main.cpp  mesh.cpp  mesh.h
src/framework/: Camera.cpp  Camera.h  Game.cpp  Game.h  HelperGL.h  LoaderGLTF.cpp  LoaderGLTF.h  Mesh.cpp  Mesh.h  Objects3d.h  Primitives.cpp  Primitives.h  ShaderProgram.cpp  ShaderProgram.h
task/: TASK-RU.md
